--- a/Havit.Blazor.Components.Web.Bootstrap.Documentation/Shared/MainLayout.razor
+++ b/Havit.Blazor.Components.Web.Bootstrap.Documentation/Shared/MainLayout.razor
@@ -1,7 +1,6 @@
 ﻿@inherits LayoutComponentBase
-@using Microsoft.AspNetCore.Components.Web.Extensions.Head
 
-<Title Value="@title" />
+<PageTitle>@title</PageTitle>
 
 <HxMessenger Position="ToastContainerPosition.MiddleCenter" />
 <HxMessageBoxHost />
