--- a/Havit.Blazor.Components.Web.Bootstrap.Documentation.Server/Pages/_Host.cshtml
+++ b/Havit.Blazor.Components.Web.Bootstrap.Documentation.Server/Pages/_Host.cshtml
@@ -4,6 +4,7 @@
 @using System.Reflection;
 @using System.Web;
 @using Havit.Blazor.Components.Web.Bootstrap.Documentation
+@using Microsoft.AspNetCore.Components.Web
 @model _Host
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
@@ -23,7 +24,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/prism-themes@1.8.0/themes/prism-vs.css" rel="stylesheet" /> @* Prism: Syntax Highlighting *@
 	<link href="/css/site.css?v=@GetAssemblyVersionUrlVariation(typeof(_Host).Assembly)" rel="stylesheet" />
 
-	<title>@Model.Title</title>
+	<title>@Model.Title</title>@* TODO HeadOutlet Prerendering *@
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JWLD6SQ66F"></script>
@@ -34,8 +35,10 @@
 
 		gtag('config', 'G-JWLD6SQ66F');
 	</script>
+    <component type="typeof(HeadOutlet)" render-mode="WebAssemblyPrerendered" />
 </head>
-<body class="bg-white">
+@*<body class="bg-white">*@
+<body>
 	<div>
 		<app>
 			<component type="typeof(App)" render-mode="WebAssemblyPrerendered" />
