--- a/Havit.Blazor.Components.Web.Bootstrap.Documentation/Shared/Sidebar.razor
+++ b/Havit.Blazor.Components.Web.Bootstrap.Documentation/Shared/Sidebar.razor
@@ -174,6 +174,31 @@
         </HxSidebarItem>
     </ItemsTemplate>
     <FooterTemplate>
-        <HxSidebarFooter Href="https://github.com/havit/Havit.Blazor" Icon="BootstrapIcon.Github" Text="GitHub repository" />
+        <HxSelect Label="Theme" TItem="string" TValue="string" Data="themes" @bind-Value="themeSelected" Nullable="true" NullText="Havit.Blazor" />
+        @*<HxSidebarFooter Href="https://github.com/havit/Havit.Blazor" Icon="BootstrapIcon.Github" Text="GitHub repository" />*@
     </FooterTemplate>
 </HxSidebar>
+<HeadContent>
+    @if (themeSelected == "Bootstrap 5")
+    {
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    }
+    else if (themeSelected is not null)
+    {
+        <link href="/css/bootstrap.@(themeSelected).min.css" rel="stylesheet" />
+    }
+</HeadContent>
+@code
+{
+    private List<string> themes = new()
+        {
+            "Bootstrap 5",
+            "Darkly",
+            "Journal",
+            "Sketchy",
+            "Simplex",
+            "Cerulean",
+            "Cosmo",
+        };
+    private string themeSelected;
+}
